--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <div id="app">
       <div class="game-container">
         <div class="cells">
-          <div v-for="cell in cells" class="cell">{{ cell }}</div>
+          <div
+            v-on:click="cellIsChosen" 
+            v-for="cell in cells" 
+            class="cell"
+          >{{ cell }}</div>
         </div>
       </div>
     </div>
@@ -25,6 +29,7 @@
           return {
             cellsNumber: 12,
             cells: [],
+            chosenCells: []
           }
         },
 
@@ -34,7 +39,7 @@
 
         methods: {
           generateRandomNumbers() {
-            const generateFormattedNumber = () => (Math.random() * 10).toFixed(2);
+            const generateFormattedNumber = () => (Math.random() * 8 + 1).toFixed(2);
 
             const rightNumber1 = generateFormattedNumber();
             const rightNumber2 = (10 - rightNumber1).toFixed(2);
@@ -48,16 +53,29 @@
 
             const randomIndex2 = Math.floor(Math.random() * (this.cellsNumber));
             this.cells.splice(randomIndex2, 0, rightNumber2);
+          },
 
+          cellIsChosen(e) {
+            const chosenCell = e.srcElement,
+                  number = +chosenCell.innerText;
+
+            console.log(e);
+            if (chosenCell.classList.contains("cell_chosen")) {
+              chosenCell.classList.remove("cell_chosen");
+
+              for (let i = 0; i < this.chosenCells.length; i++) {
+                if (this.chosenCells[i] == number) this.chosenCells.splice(i, 1);
+              } 
+
+            } else if (this.chosenCells.length < 2) {
+              this.chosenCells.push(number);
+              e.srcElement.classList.add("cell_chosen");
+            }
             
+            // console.log(this.chosenCells[0] + this.chosenCells[1])
+            console.log(this.chosenCells.reduce((sum, n) => sum + n, 0));
           },
         }
-      };
-
-      function dateToReadableString(date) {
-        var monthNames = ["января", "февраля", "марта", "апреля", "мая", "июня", "июля", "августа", "сентября", "октября", "ноября", "декабря"];
-        
-        return date.getDate() + " " + monthNames[date.getMonth()] + " " + date.getFullYear();
       };
 
       Vue.createApp(App).mount('#app');
